# django-timecheck

./: .gitignore  LICENSE  README.md  db.sqlite3  pyproject.toml
django_plusrequest.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example_app/: admin.py  apps.py  models.py  urls.py  views.py
example_app/fixtures/: initial_data.json
example_app/migrations/: 0001_initial.py
example_project/: asgi.py  settings.py  urls.py  wsgi.py
example_project/migrations/: 0001_initial.py
plusrequest/: apps.py  exceptions.py  meta.py  middleware.py  request.py  settings.py  timestamp_op.py  types.py
timecheck/: __init__.py  apps.py  exceptions.py  settings.py  tests.py  timecheck.py  types.py  utils.py
