[project]
name = "django-timecheck"
version = "0.1.0"
description = "Wrapper for django request to help handle synchronization."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["django", "djangorestframework"]

[project.urls]
Homepage = "https://github.com/huncholane/django-smartwatch"

[tool.setuptools.packages.find]
where = ["timecheck"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
